--- a/package.json
+++ b/package.json
@@ -12,7 +12,28 @@
     "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@truffle/hdwallet-provider": "^1.1.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "3.0.0",
+    "dotenv": "^8.2.0",
+    "identicon.js": "^2.3.3",
+    "ipfs-http-client": "^33.1.1",
+    "moment": "^2.29.1",
+    "react-bootstrap": "^1.3.0",
+    "react-scripts": "^3.4.3",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.1.3",
+    "truffle": "^5.1.45",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
